--- a/analysis_project.ipynb
+++ b/analysis_project.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
        "[119390 rows x 32 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +550,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +724,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -751,7 +751,7 @@
        "np.int64(129425)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1051,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1094,7 +1094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1114,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1155,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1184,7 +1184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1242,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1282,8 +1282,8 @@
     "\n",
     "Since the distribution shape is not considered in this project, I will proceed with a correlation test under the assumption that all variables are normally distributed and contain no outliers.\n",
     "\n",
-    "**Correlation Analysis → to examine the relationship between the cancellation rate and other variables\n",
-    "**\n",
+    "**Correlation Analysis** → to examine the relationship between the cancellation rate and other variables\n",
+    "\n",
     "H0: There is no correlation between the cancellation rate and variable X\n",
     "\n",
     "H1: There is a correlation between the cancellation rate and variable X\n",
@@ -1294,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1313,7 +1313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1360,7 +1360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1397,20 +1397,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Spearman Correlation (booking_changes and is_canceled): -0.18510738352996442, p-value: 0.0\n"
+      "Spearman Correlation (booking_changes and is_canceled): -0.1836797212707808, p-value: 0.0\n"
      ]
     }
    ],
    "source": [
     "# Spearman correlation between booking_changes and is_canceled\n",
-    "corr_booking_changes, p_value_booking_changes = stats.spearmanr(df['booking_changes'], df['is_canceled'])\n",
+    "corr_booking_changes, p_value_booking_changes = stats.spearmanr(main_df['booking_changes'], main_df['is_canceled'])\n",
     "print(f\"Spearman Correlation (booking_changes and is_canceled): {corr_booking_changes}, p-value: {p_value_booking_changes}\")\n"
    ]
   },
@@ -1430,20 +1430,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Spearman Correlation (previous_cancellations and is_canceled): 0.2702334145679731, p-value: 0.0\n"
+      "Spearman Correlation (previous_cancellations and is_canceled): 0.27170484388832816, p-value: 0.0\n"
      ]
     }
    ],
    "source": [
     "# Spearman correlation between previous_cancellations and is_canceled\n",
-    "corr_prev_cancellations, p_value_prev_cancellations = stats.spearmanr(df['previous_cancellations'], df['is_canceled'])\n",
+    "corr_prev_cancellations, p_value_prev_cancellations = stats.spearmanr(main_df['previous_cancellations'], main_df['is_canceled'])\n",
     "print(f\"Spearman Correlation (previous_cancellations and is_canceled): {corr_prev_cancellations}, p-value: {p_value_prev_cancellations}\")"
    ]
   },
@@ -1463,20 +1463,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Spearman Correlation (previous_bookings_not_canceled and is_canceled): -0.11535443633217823, p-value: 0.0\n"
+      "Spearman Correlation (previous_bookings_not_canceled and is_canceled): -0.11202088884550235, p-value: 0.0\n"
      ]
     }
    ],
    "source": [
     "# Spearman correlation between previous_bookings_not_canceled and is_canceled\n",
-    "corr_prev_bookings_not_canceled, p_value_prev_bookings_not_canceled = stats.spearmanr(df['previous_bookings_not_canceled'], df['is_canceled'])\n",
+    "corr_prev_bookings_not_canceled, p_value_prev_bookings_not_canceled = stats.spearmanr(main_df['previous_bookings_not_canceled'], main_df['is_canceled'])\n",
     "print(f\"Spearman Correlation (previous_bookings_not_canceled and is_canceled): {corr_prev_bookings_not_canceled}, p-value: {p_value_prev_bookings_not_canceled}\")\n"
    ]
   },
@@ -1496,20 +1496,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Spearman Correlation (adr and is_canceled): 0.05087592619592027, p-value: 2.9235881812104953e-69\n"
+      "Spearman Correlation (adr and is_canceled): 0.0323749138554454, p-value: 1.1585401229130485e-28\n"
      ]
     }
    ],
    "source": [
     "# Spearman correlation between adr and is_canceled\n",
-    "corr_adr, p_value_adr = stats.spearmanr(df['adr'], df['is_canceled'])\n",
+    "corr_adr, p_value_adr = stats.spearmanr(main_df['adr'], main_df['is_canceled'])\n",
     "print(f\"Spearman Correlation (adr and is_canceled): {corr_adr}, p-value: {p_value_adr}\")\n"
    ]
   },
@@ -1529,7 +1529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1594,7 +1594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1652,7 +1652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1713,7 +1713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1761,7 +1761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
